fix align
f

--- a/module07/style.css
+++ b/module07/style.css
@@ -1,5 +1,5 @@
 picture img{
     display:flex;
-    align-items: center;
+   
     justify-content: center;
 }
